adding initial React config

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
     <title>React Webpack From Scratch</title>
 </head>
 <body>
-<p>hello world from public/index.html</p>
+    <div id="react-entry">
+
+    </div>
 </body>
 </html>
